[package]
name = "curve_finance_substream"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/messari/substreams/"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex = "0.4.3"
hex-literal = "0.3.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-database-change = "1"
substreams-entity-change = "1"
substreams-helper = { path = "../substreams-helper" }

[build-dependencies]
anyhow = "1"
regex = "1.8"
substreams-ethereum = "0.9"
substreams-common = { path = "../common" }
